kubernetes/apps/traefik-ingress/traefik-internal/app/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: network-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-internal-traefik-ingress
  ingress:
    - fromEntities:
      - cluster
      toPorts:
      - ports:
        - port: "8000"
          protocol: ANY
        - port: "8443"
          protocol: ANY
    - fromCIDR:
      - 192.168.0.0/23
      toPorts:
      - ports:
        - port: "8000"
          protocol: ANY
        - port: "8443"
          protocol: ANY
  egress:
    - toEntities:
      - ingress
